Fix for momentum scrolling on iOS and rows disappearing on Android

--- a/ui/client-react/src/components/nav/nav.scss
+++ b/ui/client-react/src/components/nav/nav.scss
@@ -151,9 +151,12 @@ a {
             display: flex;
             order: 2;
             overflow-y: scroll;
+            // Enable momentum scrolling on iOS devices
             -webkit-overflow-scrolling: touch;
             flex: 1;
             min-width: 0;
+            // Enable hardware acceleration for scrolling through content.
+            transform: translate3d(0,0,0);
         }
 
         .footer {
